--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -74,3 +74,10 @@ fos_user:
     from_email:
         address: "%mailer_user%"
         sender_name: "%mailer_user%"
+vich_uploader:
+    db_driver: orm
+    mappings:
+        photo_image:
+            uri_prefix:         /img/uploads
+            upload_destination: '%kernel.root_dir%/../web/img/uploads'
+            namer:              vich_uploader.namer_uniqid
